# philosophy_api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  requirements2.txt  test.db
.github/workflows/: ghrc.yml  python-app.yml
Infrastructure/: database.py  generic_repository.py
Infrastructure/Repositories/: card.py  card_depr.py  game_progress.py  level.py  level_ending.py
Models/: __init__.py  card.py  game_progress.py  level.py
Schemas/: card.py  game_progress.py  level.py  level_ending.py
Services/: card.py  game_progress.py  level.py
src/: __init__.py  autorization.py  chat_func.py  models.py  utils.py
src/server/Exceptions/: handler.py
src/server/Infrastructure/: __init__.py  database.py  generic_repository.py
src/server/Infrastructure/Repositories/: card.py  card_depr.py  game_progress.py  level.py  level_ending.py
src/server/Models/: __init__.py  card.py  game_progress.py  level.py  level_ending.py
src/server/Schemas/: __init__.py  card.py  game_progress.py  level.py  level_ending.py
src/server/Services/: __init__.py  card.py  game_progress.py  level.py
tests/: test_ask.py  test_ask2.py  test_evaluate.py  test_root.py
