[project]
name = "philosophy-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "nuitka>=2.8.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "ruff>=0.14.12",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.2",
]
view = [
    "pyvis>=0.3.2",
    "streamlit>=1.52.2",
]
